tests/expectations/parser/finalize/finalize_fail.out
Error [EPAR0370005]: expected '}', '@', 'record', 'struct', 'async', 'const', 'function', 'inline', 'mapping', 'storage', 'script', 'transition' -- found 'finalize'
    --> test:5:7
     |
   5 |     } finalize {
     |       ^^^^^^^^
